src/main/java/application/testData/invalidRandomAddresses/easy/RandomAddressesWithoutTwoFields.java
package application.testData.invalidRandomAddresses.easy;

public class RandomAddressesWithoutTwoFields {
}
